add new helpers

--- a/test/templates.html
+++ b/test/templates.html
@@ -7,5 +7,5 @@
 </template>
 
 <template name="testthis">
-<p id="{{id}}">test this [{{helper1}}]</p>
+<p id="{{id}}">test this [{{helper1}}] [{{helper2}}] [{{helper3}}]</p>
 </template>
