add template to test functions placements

--- a/test/templates.html
+++ b/test/templates.html
@@ -9,3 +9,7 @@
 <template name="testthis">
 <p id="{{id}}">test this [{{helper1}}] [{{helper2}}] [{{helper3}}]</p>
 </template>
+
+<template name="TestFunctions">
+  {{helper}} {{helper2}} {{helper3}}
+</template>
